package ar.edu.utn.frba.dds.entities.algoritmoDeConsenso;

import ar.edu.utn.frba.dds.entities.Coleccion;

public interface AlgoritmoDeConsenso {
  void consensuarHechos(Coleccion coleccion);
}
