package ar.edu.utn.frba.dds.entities.algoritmoDeConsenso;

public enum TipoAlgoritmo {
  ABSOLUTA,
  SIMPLE,
  MULTIPLE_MENCION,
  NINGUNO
}
