package ar.edu.utn.frba.dds.entities.detectorDeSpam;

public interface DetectorDeSpam {
  boolean esSpam(String texto);
}
