package ar.edu.utn.frba.dds.webclient.dto;

public enum Estado {
  PENDIENTE,
  APROBADA,
  DENEGADA,
}
