package ar.edu.utn.frba.dds.webclient.dto;

public enum TipoFuente {
  DATASET,
  PROXY,
  CONTRIBUYENTE,
}
