package ar.edu.utn.frba.dds.webclient.dto.input.hecho;

public class Etiqueta {
  private Long id;
  private String nombre;
}
